Remove API key from HelmetDetection notebook

--- a/HelmetDetection.ipynb
+++ b/HelmetDetection.ipynb
@@ -44,7 +44,7 @@
     {
       "cell_type": "code",
       "source": [
-        "rf = Roboflow(api_key=\"97BKSCBw2Drbv6qpGq5J\")\n",
+        "rf = Roboflow(api_key=\"\")\n",
         "\n",
         "project = rf.workspace(\"jo-i0yms\").project(\"helmet-detection-shw28\")\n",
         "dataset = project.version(2).download(\"yolov8\")"
